@@ -8,38 +8,35 @@ import com.github.dockerjava.api.model.PortBinding;
 import com.github.dockerjava.api.model.Ports;
 import com.github.tomakehurst.wiremock.client.WireMock;
 import com.google.common.collect.Lists;
+import jakarta.inject.Inject;
 import lombok.extern.slf4j.Slf4j;
 import org.assertj.core.api.Assertions;
-import org.junit.experimental.runners.Enclosed;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.api.extension.ExtensionContext;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.params.provider.ArgumentsProvider;
+import org.junit.jupiter.params.provider.ArgumentsSource;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.cloud.contract.wiremock.AutoConfigureWireMock;
 import org.springframework.http.MediaType;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.test.annotation.DirtiesContext;
-import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.context.jdbc.Sql;
-import org.springframework.test.context.junit4.SpringRunner;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.web.context.WebApplicationContext;
-import org.testcontainers.containers.wait.strategy.LogMessageWaitStrategy;
+import org.testcontainers.containers.wait.strategy.Wait;
 import org.testcontainers.elasticsearch.ElasticsearchContainer;
 import uk.gov.hmcts.ccd.data.casedetails.SecurityClassification;
 import uk.gov.hmcts.ccd.data.casedetails.search.MetaData;
@@ -58,7 +55,6 @@ import uk.gov.hmcts.ccd.endpoint.std.GlobalSearchEndpoint;
 import uk.gov.hmcts.ccd.test.ElasticsearchTestHelper;
 import uk.gov.hmcts.ccd.v2.internal.resource.CaseSearchResultViewResource;
 
-import javax.inject.Inject;
 import java.io.IOException;
 import java.time.Duration;
 import java.util.ArrayList;
@@ -178,7 +174,7 @@ import static uk.gov.hmcts.ccd.test.RoleAssignmentsHelper.securityCTSpecificPubl
 import static uk.gov.hmcts.ccd.test.RoleAssignmentsHelper.securityCTSpecificRestrictedUserRoleAssignmentJson;
 
 @Slf4j
-@RunWith(Enclosed.class)
+@ExtendWith(SpringExtension.class)
 public class ElasticsearchIT extends ElasticsearchBaseTest {
 
     private static final String REFERENCE_GLOBAL_SEARCH_01 = "1111222233334444";
@@ -210,20 +206,21 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         log.info("Starting Elastic search...");
         container = new ElasticsearchContainer("docker.elastic.co/elasticsearch/elasticsearch:" + elasticVersion)
             .withEnv("discovery.type", "single-node")
+            .withEnv("ES_JAVA_OPTS", "-Xms256m -Xmx256m")
             .withExposedPorts(9200)
             .withCreateContainerCmdModifier(cmd -> cmd.withHostConfig(
                 new HostConfig().withPortBindings(
                     new PortBinding(Ports.Binding.bindPort(httpPortValue), new ExposedPort(9200))
                 )
-            ));
+            ))
 
-        String regex = ".*(\"message\":\\s?\"started\".*|] started\n$)";
-        container.setWaitStrategy((new LogMessageWaitStrategy())
-            .withRegEx(regex)
-            .withStartupTimeout(Duration.ofMinutes(3)));
+            .withEnv("xpack.security.enabled", "false")
+            .waitingFor(Wait.forHttp("/_cluster/health")
+                .forStatusCode(200)
+                .withStartupTimeout(Duration.ofMinutes(1)));
 
         container.start();
-        log.info("Elastic search started.");
+        log.info("Elastic search {} started.", elasticVersion);
         ElasticsearchITSetup configurer = new ElasticsearchITSetup(httpPortValue);
         log.info("Elastic search adding indexes.");
         configurer.initIndexes();
@@ -250,7 +247,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
     }
 
     @Nested
-    class UICaseSearchControllerIT {
+    public class UICaseSearchControllerIT {
 
         private static final String POST_SEARCH_CASES = "/internal/searchCases";
         private static final String CASE_FIELD_ID = "caseFieldId";
@@ -286,7 +283,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
                 null);
 
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
                 () -> assertThat(caseSearchResultViewResource.getCases().size(), is(1)),
@@ -312,7 +309,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
                 null);
 
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
                 () -> assertThat(caseSearchResultViewResource.getCases().size(), is(1)),
@@ -359,7 +356,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
                 null);
 
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
                 () -> assertThat(caseSearchResultViewResource.getCases().size(), is(1)),
@@ -388,7 +385,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
                 "TEST");
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
                 () -> assertUseCaseHeadersUserRole(caseSearchResultViewResource.getHeaders()),
@@ -403,21 +400,21 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             CaseSearchResultViewResource caseSearchResultViewResource =
                 executeRequest(searchRequest, CASE_TYPE_A, "RDM-8782");
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
 
             List<String> expectedFields = Collections.singletonList(EMAIL_FIELD);
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
                 () -> assertThat(caseSearchResultViewResource.getHeaders().size(), is(1)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getMetadata().getJurisdiction(),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getMetadata().getJurisdiction(),
                     is(AUTOTEST_1)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getMetadata().getCaseTypeId(),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getMetadata().getCaseTypeId(),
                     is(CASE_TYPE_A)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getCases().size(), is(1)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getCases().get(0),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getCases().size(), is(1)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getCases().getFirst(),
                     is(DEFAULT_CASE_REFERENCE)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().size(), is(1)),
-                () -> expectedFields.forEach(f -> assertThat(caseSearchResultViewResource.getHeaders().get(0)
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().size(), is(1)),
+                () -> expectedFields.forEach(f -> assertThat(caseSearchResultViewResource.getHeaders().getFirst()
                     .getFields(), hasItem(hasProperty(CASE_FIELD_ID, is(f))))),
 
                 () -> assertThat(caseDetails.getFields().get(EMAIL_FIELD), is(EMAIL_VALUE)),
@@ -432,18 +429,18 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
                 "RDM-8782NOACCESS");
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
 
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getHeaders().size(), is(1)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getMetadata().getJurisdiction(),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getMetadata().getJurisdiction(),
                     is(AUTOTEST_1)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getMetadata().getCaseTypeId(),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getMetadata().getCaseTypeId(),
                     is(CASE_TYPE_A)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getCases().size(), is(1)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getCases().get(0),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getCases().size(), is(1)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getCases().getFirst(),
                     is(DEFAULT_CASE_REFERENCE)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().size(), is(0)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().size(), is(0)),
                 () -> assertThat(caseDetails.getFields().size(), is(8)),
                 () -> assertExampleCaseMetadata(caseDetails.getFields(), false)
             );
@@ -469,7 +466,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
                 "ORGCASES");
 
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
                 () -> assertThat(caseSearchResultViewResource.getCases().size(), is(1)),
@@ -494,16 +491,16 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
                 null);
 
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().size(), is(3)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().get(0).getCaseFieldId(),
-                    is(TEXT_FIELD)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().get(1).getCaseFieldId(),
-                    is(nestedFieldId)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().get(2).getCaseFieldId(),
-                    is(MetaData.CaseField.CASE_REFERENCE.getReference())),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().size(), is(3)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().getFirst()
+                        .getCaseFieldId(), is(TEXT_FIELD)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().get(1)
+                        .getCaseFieldId(), is(nestedFieldId)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().get(2)
+                        .getCaseFieldId(), is(MetaData.CaseField.CASE_REFERENCE.getReference())),
                 () -> assertThat(caseDetails.getFields().size(), is(11)),
                 () -> assertExampleCaseMetadata(caseDetails.getFields(), false),
                 () -> assertThat(caseDetails.getFields().get(TEXT_FIELD), is(TEXT_VALUE)),
@@ -531,16 +528,16 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
                 "SEARCH");
 
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().size(), is(3)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().get(0).getCaseFieldId(),
-                    is(TEXT_FIELD)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().get(1).getCaseFieldId(),
-                    is(nestedFieldId)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().get(2).getCaseFieldId(),
-                    is(MetaData.CaseField.CASE_REFERENCE.getReference())),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().size(), is(3)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().getFirst()
+                        .getCaseFieldId(), is(TEXT_FIELD)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().get(1)
+                        .getCaseFieldId(), is(nestedFieldId)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().get(2)
+                        .getCaseFieldId(), is(MetaData.CaseField.CASE_REFERENCE.getReference())),
                 () -> assertThat(caseDetails.getFields().size(), is(11)),
                 () -> assertExampleCaseMetadata(caseDetails.getFields(), false),
                 () -> assertThat(caseDetails.getFields().get(TEXT_FIELD), is(TEXT_VALUE)),
@@ -566,14 +563,14 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().size(), is(10)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getFields().size(), is(16)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().size(),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().size(), is(10)),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getFields().size(), is(16)),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData().size(),
                     is(2)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField2")
-                    .asText(), is("SDField2Value")),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField3")
-                    .asText(), is("SDField3Value"))
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField2").asText(), is("SDField2Value")),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField3").asText(), is("SDField3Value"))
             );
         }
 
@@ -589,14 +586,14 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().size(),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData().size(),
                     is(3)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField1")
-                    .asText(), is("SDField1Value")),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField2")
-                    .asText(), is("SDField2Value")),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField3")
-                    .asText(), is("SDField3Value"))
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField1").asText(), is("SDField1Value")),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField2").asText(), is("SDField2Value")),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField3").asText(), is("SDField3Value"))
             );
         }
 
@@ -611,7 +608,8 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData(), is(nullValue()))
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData(),
+                    is(nullValue()))
             );
         }
 
@@ -626,14 +624,14 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().size(),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData().size(),
                     is(3)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField1")
-                    .asText(), is("SDField1Value")),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField2")
-                    .asText(), is("SDField2Value")),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField3")
-                    .asText(), is("SDField3Value"))
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField1").asText(), is("SDField1Value")),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField2").asText(), is("SDField2Value")),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField3").asText(), is("SDField3Value"))
             );
         }
 
@@ -712,14 +710,13 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             assertAll(
                 () -> assertThat(headers.size(), is(1)),
-                () -> assertThat(headers.get(0).getMetadata().getJurisdiction(), is(AUTOTEST_1)),
-                () -> assertThat(headers.get(0).getMetadata().getCaseTypeId(), is(CASE_TYPE_A)),
-                () -> assertThat(headers.get(0).getCases().size(), is(1)),
-                () -> assertThat(headers.get(0).getCases().get(0), is(DEFAULT_CASE_REFERENCE)),
-                () -> assertThat(headers.get(0).getFields().size(), is(24)),
-                () -> expectedFields.forEach(f -> assertThat(headers.get(0).getFields(),
-                    hasItem(hasProperty(CASE_FIELD_ID,
-                        is(f)))))
+                () -> assertThat(headers.getFirst().getMetadata().getJurisdiction(), is(AUTOTEST_1)),
+                () -> assertThat(headers.getFirst().getMetadata().getCaseTypeId(), is(CASE_TYPE_A)),
+                () -> assertThat(headers.getFirst().getCases().size(), is(1)),
+                () -> assertThat(headers.getFirst().getCases().getFirst(), is(DEFAULT_CASE_REFERENCE)),
+                () -> assertThat(headers.getFirst().getFields().size(), is(24)),
+                () -> expectedFields.forEach(f -> assertThat(headers.getFirst().getFields(),
+                    hasItem(hasProperty(CASE_FIELD_ID, is(f)))))
             );
         }
 
@@ -729,14 +726,13 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             assertAll(
                 () -> assertThat(headers.size(), is(1)),
-                () -> assertThat(headers.get(0).getMetadata().getJurisdiction(), is(AUTOTEST_1)),
-                () -> assertThat(headers.get(0).getMetadata().getCaseTypeId(), is(CASE_TYPE_A)),
-                () -> assertThat(headers.get(0).getCases().size(), is(1)),
-                () -> assertThat(headers.get(0).getCases().get(0), is(DEFAULT_CASE_REFERENCE)),
-                () -> assertThat(headers.get(0).getFields().size(), is(5)),
-                () -> expectedFields.forEach(f -> assertThat(headers.get(0).getFields(),
-                    hasItem(hasProperty(CASE_FIELD_ID,
-                        is(f)))))
+                () -> assertThat(headers.getFirst().getMetadata().getJurisdiction(), is(AUTOTEST_1)),
+                () -> assertThat(headers.getFirst().getMetadata().getCaseTypeId(), is(CASE_TYPE_A)),
+                () -> assertThat(headers.getFirst().getCases().size(), is(1)),
+                () -> assertThat(headers.getFirst().getCases().getFirst(), is(DEFAULT_CASE_REFERENCE)),
+                () -> assertThat(headers.getFirst().getFields().size(), is(5)),
+                () -> expectedFields.forEach(f -> assertThat(headers.getFirst().getFields(),
+                    hasItem(hasProperty(CASE_FIELD_ID, is(f)))))
             );
         }
 
@@ -748,20 +744,19 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             assertAll(
                 () -> assertThat(headers.size(), is(1)),
-                () -> assertThat(headers.get(0).getMetadata().getJurisdiction(), is(AUTOTEST_1)),
-                () -> assertThat(headers.get(0).getMetadata().getCaseTypeId(), is(CASE_TYPE_A)),
-                () -> assertThat(headers.get(0).getCases().size(), is(1)),
-                () -> assertThat(headers.get(0).getCases().get(0), is(DEFAULT_CASE_REFERENCE)),
-                () -> assertThat(headers.get(0).getFields().size(), is(10)),
-                () -> expectedFields.forEach(f -> assertThat(headers.get(0).getFields(),
-                    hasItem(hasProperty(CASE_FIELD_ID,
-                        is(f)))))
+                () -> assertThat(headers.getFirst().getMetadata().getJurisdiction(), is(AUTOTEST_1)),
+                () -> assertThat(headers.getFirst().getMetadata().getCaseTypeId(), is(CASE_TYPE_A)),
+                () -> assertThat(headers.getFirst().getCases().size(), is(1)),
+                () -> assertThat(headers.getFirst().getCases().getFirst(), is(DEFAULT_CASE_REFERENCE)),
+                () -> assertThat(headers.getFirst().getFields().size(), is(10)),
+                () -> expectedFields.forEach(f -> assertThat(headers.getFirst().getFields(),
+                    hasItem(hasProperty(CASE_FIELD_ID, is(f)))))
             );
         }
 
         private void assertExampleCaseData(Map<String, Object> data, boolean formatted) {
             assertAll(
-                () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).get(0).get(VALUE), is(COLLECTION_VALUE)),
+                () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).getFirst().get(VALUE), is(COLLECTION_VALUE)),
                 () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).get(1).get(VALUE),
                     is("CollectionTextValue1")),
                 () -> assertThat(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_FIXED_LIST_FIELD), is("VALUE3")),
@@ -769,7 +764,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                     .get(NESTED_NUMBER_FIELD), is(NESTED_NUMBER_FIELD_VALUE)),
                 () -> assertThat(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_TEXT_FIELD), is(COMPLEX_TEXT_VALUE)),
                 () -> assertThat(asCollection(asMap(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_NESTED_FIELD))
-                    .get(NESTED_COLLECTION_TEXT_FIELD)).get(0).get(VALUE), is("NestedCollectionTextValue1")),
+                    .get(NESTED_COLLECTION_TEXT_FIELD)).getFirst().get(VALUE), is("NestedCollectionTextValue1")),
                 () -> assertThat(asCollection(asMap(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_NESTED_FIELD))
                     .get(NESTED_COLLECTION_TEXT_FIELD)).get(1).get(VALUE), is("NestedCollectionTextValue2")),
                 () -> assertThat(data.get(DATE_FIELD), is(formatted ? "12/2007" : DATE_VALUE)),
@@ -787,7 +782,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 () -> assertThat(data.get(EMAIL_FIELD), is(EMAIL_VALUE)),
                 () -> assertThat(data.get(FIXED_LIST_FIELD), is(FIXED_LIST_VALUE)),
                 () -> assertThat(data.get(TEXT_FIELD), is(TEXT_VALUE)),
-                () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).get(0).get(VALUE), is(COLLECTION_VALUE)),
+                () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).getFirst().get(VALUE), is(COLLECTION_VALUE)),
                 () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).get(1).get(VALUE),
                     is("CollectionTextValue1"))
             );
@@ -840,14 +835,8 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         }
     }
 
-    @AutoConfigureWireMock(port = 0)
-    @ActiveProfiles("test")
-    @RunWith(SpringRunner.class)
-    @DirtiesContext
-    @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
-    @TestPropertySource(locations = "classpath:test.properties")
     @Nested
-    class CaseSearchEndpointESSecurityIT {
+    public class CaseSearchEndpointESSecurityIT extends WireMockBaseTest {
 
         private static final String POST_SEARCH_CASES = "/searchCases";
         private static final String SECURITY_CASE_2 = "1589460125872336";
@@ -863,7 +852,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         }
 
         @Nested
-        class CrudTest {
+        public class CrudTest {
             @BeforeEach
             void beforeEach() {
                 log.info("CrudTest BeforeEach test method");
@@ -921,7 +910,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
                 assertAll(
                     () -> assertThat(caseSearchResult.getTotal(), is(1L)),
-                    () -> assertThat(caseSearchResult.getCases().get(0).getReference(), is(1589460099608690L))
+                    () -> assertThat(caseSearchResult.getCases().getFirst().getReference(), is(1589460099608690L))
                 );
             }
 
@@ -1070,7 +1059,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         }
 
         @Nested
-        class SecurityClassificationTest {
+        public class SecurityClassificationTest {
 
             // Case
 
@@ -1241,7 +1230,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         }
 
         @Nested
-        class GeneralAccessTest {
+        public class GeneralAccessTest {
             @BeforeEach
             void beforeEach() {
                 log.info("GeneralAccessTest BeforeEach test method");
@@ -1259,7 +1248,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
                 assertAll(
                     () -> assertThat(caseSearchResult.getTotal(), is(1L)),
-                    () -> assertThat(caseSearchResult.getCases().get(0).getCaseTypeId(), is(CASE_TYPE_B))
+                    () -> assertThat(caseSearchResult.getCases().getFirst().getCaseTypeId(), is(CASE_TYPE_B))
                 );
             }
 
@@ -1304,10 +1293,10 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             void shouldMergePermissionsOfMultipleRolesForCases() throws Exception {
                 if (applicationParams.getEnableAttributeBasedAccessControl()) {
                     String roleAssignmentResponseJson = roleAssignmentResponseJson(
-                        securityCTSpecificPublicUserRoleAssignmentJson("123","idam:caseworker-autotest1-solicitor",
-                            "1588870615652827"),
-                        securityCTSpecificPublicUserRoleAssignmentJson("123","idam:caseworker-autotest1-solicitor",
-                            "1589460125872336")
+                        securityCTSpecificPublicUserRoleAssignmentJson("123",
+                            "idam:caseworker-autotest1-solicitor","1588870615652827"),
+                        securityCTSpecificPublicUserRoleAssignmentJson("123",
+                            "idam:caseworker-autotest1-solicitor","1589460125872336")
                     );
 
                     stubFor(WireMock.get(urlMatching(GET_ROLE_ASSIGNMENTS_PREFIX + "123"))
@@ -1348,8 +1337,10 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         void shouldOnlyReturnCasesSolicitorHasBeenGrantedAccessTo() throws Exception {
             if (applicationParams.getEnableAttributeBasedAccessControl()) {
                 String roleAssignmentResponseJson = roleAssignmentResponseJson(
-                    securityCTSpecificPublicUserRoleAssignmentJson("123","[CREATOR]", "1589460125872336"),
-                    securityCTSpecificPublicUserRoleAssignmentJson("123","[DEFENDANT]", "1589460099608691")
+                    securityCTSpecificPublicUserRoleAssignmentJson("123","[CREATOR]",
+                        "1589460125872336"),
+                    securityCTSpecificPublicUserRoleAssignmentJson("123","[DEFENDANT]",
+                        "1589460099608691")
                 );
 
                 stubFor(WireMock.get(urlMatching(GET_ROLE_ASSIGNMENTS_PREFIX + "123"))
@@ -1397,7 +1388,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         }
 
         private Map<String, JsonNode> getFirstCaseData(CaseSearchResult caseSearchResult) {
-            return caseSearchResult.getCases().get(0).getData();
+            return caseSearchResult.getCases().getFirst().getData();
         }
 
         private CaseDetails getCase(CaseSearchResult caseSearchResult, Long reference) {
@@ -1413,7 +1404,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
     }
 
     @Nested
-    class CaseSearchEndpointESIT {
+    public class CaseSearchEndpointESIT {
 
         private static final String POST_SEARCH_CASES = "/searchCases";
 
@@ -1430,7 +1421,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         }
 
         @Nested
-        class CrossCaseTypeSearch {
+        public class CrossCaseTypeSearch {
 
             // Note that cross case type searches do NOT return case data
             @Test
@@ -1444,7 +1435,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                     () -> assertThat(caseSearchResult.getTotal(), is(3L)),
                     () -> assertThat(caseSearchResult.getCaseReferences(CASE_TYPE_A).size(), is(2)),
                     () -> assertThat(caseSearchResult.getCaseReferences(CASE_TYPE_B).size(), is(1)),
-                    () -> assertThat(caseSearchResult.getCases().get(0).getData().size(), is(0)),
+                    () -> assertThat(caseSearchResult.getCases().getFirst().getData().size(), is(0)),
                     () -> assertThat(caseSearchResult.getCases().get(1).getData().size(), is(0)),
                     () -> assertThat(caseSearchResult.getCases().get(2).getData().size(), is(0))
                 );
@@ -1463,13 +1454,13 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
                 assertAll(
                     () -> assertThat(caseSearchResult.getTotal(), is(3L)),
-                    () -> assertThat(caseSearchResult.getCases().get(0).getData().get(TEXT_ALIAS).asText(),
+                    () -> assertThat(caseSearchResult.getCases().getFirst().getData().get(TEXT_ALIAS).asText(),
                         is(TEXT_VALUE)),
                     () -> assertThat(caseSearchResult.getCases().get(1).getData().get(TEXT_ALIAS).asText(),
                         is("CCC TextValue")),
                     () -> assertThat(caseSearchResult.getCases().get(2).getData().get(TEXT_ALIAS).asText(),
                         is("BBB TextValue")),
-                    () -> assertThat(caseSearchResult.getCases().get(0).getData().size(), is(1)),
+                    () -> assertThat(caseSearchResult.getCases().getFirst().getData().size(), is(1)),
                     () -> assertThat(caseSearchResult.getCases().get(1).getData().size(), is(1)),
                     () -> assertThat(caseSearchResult.getCases().get(2).getData().size(), is(1))
                 );
@@ -1510,7 +1501,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         }
 
         @Nested
-        class SingleCaseTypeSearch {
+        public class SingleCaseTypeSearch {
 
             @Test
             void shouldReturnAllCaseDetails() throws Exception {
@@ -1529,7 +1520,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
                 CaseSearchResult caseSearchResult = executeRequest(searchRequest, CASE_TYPE_A);
 
-                CaseDetails caseDetails = caseSearchResult.getCases().get(0);
+                CaseDetails caseDetails = caseSearchResult.getCases().getFirst();
                 assertAll(
                     () -> assertThat(caseSearchResult.getTotal(), is(1L)),
                     () -> assertExampleCaseMetadata(caseDetails),
@@ -1553,7 +1544,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
                 CaseSearchResult caseSearchResult = executeRequest(searchRequest, CASE_TYPE_A);
 
-                CaseDetails caseDetails = caseSearchResult.getCases().get(0);
+                CaseDetails caseDetails = caseSearchResult.getCases().getFirst();
                 assertAll(
                     () -> assertThat(caseSearchResult.getTotal(), is(1L)),
                     () -> assertExampleCaseMetadata(caseDetails),
@@ -1575,7 +1566,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
                 CaseSearchResult caseSearchResult = executeRequest(searchRequest, CASE_TYPE_A);
 
-                CaseDetails caseDetails = caseSearchResult.getCases().get(0);
+                CaseDetails caseDetails = caseSearchResult.getCases().getFirst();
                 assertAll(
                     () -> assertThat(caseSearchResult.getTotal(), is(1L)),
                     () -> assertExampleCaseMetadata(caseDetails),
@@ -1678,7 +1669,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
 
     @Nested
-    class GlobalSearchEndpointESIT {
+    public class GlobalSearchEndpointESIT {
 
         private static final String CASE_TYPE_GLOBAL_SEARCH = "GlobalSearch";
         private static final String JURISDICTION_GLOBAL_SEARCH = "AUTOTEST1";
@@ -1725,7 +1716,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 () -> assertThat(result.getResultInfo().getCasesReturned(), is(1)),
                 () -> assertThat(result.getResults().size(), is(1))
             );
-            GlobalSearchResponsePayload.Result result1 = result.getResults().get(0);
+            GlobalSearchResponsePayload.Result result1 = result.getResults().getFirst();
             assertAll(
                 // verify case data from: `/resources/elasticsearch/data/global_search/global-search-01.json`
                 () -> assertThat(result1.getStateId(), is(STATE_GLOBAL_SEARCH)),
@@ -1734,7 +1725,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 () -> assertThat(result1.getCaseManagementCategoryName(), is("Category label Order-02")),
                 () -> assertThat(result1.getCaseNameHmctsInternal(), is("Name Internal 01")),
                 () -> assertThat(result1.getOtherReferences().size(), is(1)),
-                () -> assertThat(result1.getOtherReferences().get(0), is(OTHER_REFERENCE_GLOBAL_SEARCH)),
+                () -> assertThat(result1.getOtherReferences().getFirst(), is(OTHER_REFERENCE_GLOBAL_SEARCH)),
                 // verify ref-data from: `/resources/mappings/refdata/get_building_locations.json`
                 () -> assertThat(result1.getBaseLocationId(), is(CASE_MANAGEMENT_BASE_LOCATION_GLOBAL_SEARCH)),
                 () -> assertThat(result1.getBaseLocationName(), is("54 TEST ROAD")),
@@ -1784,7 +1775,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 () -> assertThat(result.getResultInfo().getCasesReturned(), is(1)),
                 () -> assertThat(result.getResults().size(), is(1))
             );
-            assertThat(result.getResults().get(0).getCaseReference(), is(REFERENCE_GLOBAL_SEARCH_02));
+            assertThat(result.getResults().getFirst().getCaseReference(), is(REFERENCE_GLOBAL_SEARCH_02));
         }
 
         @DisplayName("ES Filters: should not return cases filtered by pre security filters")
@@ -1812,7 +1803,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 () -> assertThat(result.getResultInfo().getCasesReturned(), is(1)),
                 () -> assertThat(result.getResults().size(), is(1))
             );
-            assertThat(result.getResults().get(0).getCaseReference(), is(REFERENCE_GLOBAL_SEARCH_01));
+            assertThat(result.getResults().getFirst().getCaseReference(), is(REFERENCE_GLOBAL_SEARCH_01));
         }
 
         @DisplayName("ES Filters: should not return case fields filtered by post filtering authorisation rules")
@@ -1840,7 +1831,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 () -> assertThat(result.getResultInfo().getCasesReturned(), is(1)),
                 () -> assertThat(result.getResults().size(), is(1))
             );
-            GlobalSearchResponsePayload.Result result1 = result.getResults().get(0);
+            GlobalSearchResponsePayload.Result result1 = result.getResults().getFirst();
             assertAll(
                 () -> assertThat(result1.getCaseReference(), is(REFERENCE_GLOBAL_SEARCH_01)),
 
@@ -1857,8 +1848,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         }
 
         @ParameterizedTest(name = "Pagination: should apply Pagination: {0}")
-        @MethodSource("uk.gov.hmcts.ccd.ElasticsearchIT#providePaginationTestArguments")
-        @SuppressWarnings("unused")
+        @ArgumentsSource(value = PaginationTestProvider.class)
         void shouldApplyPagination(String name,
                                    int startRecordNumber,
                                    int maxReturnRecordCount,
@@ -1909,8 +1899,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         }
 
         @ParameterizedTest(name = "Sort: should apply sort: {0}")
-        @MethodSource("uk.gov.hmcts.ccd.ElasticsearchIT#provideSortCriteriaTestArguments")
-        @SuppressWarnings("unused")
+        @ArgumentsSource(SortCriteriaTestProvider.class)
         void shouldApplySort(String name,
                              List<SortCriteria> sortCriteria,
                              List<String> expectedCaseReferenceOrder) throws Exception {
@@ -1977,7 +1966,14 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         }
     }
 
-    @SuppressWarnings("unused")
+    public static class PaginationTestProvider implements ArgumentsProvider  {
+
+        @Override
+        public Stream<? extends Arguments> provideArguments(ExtensionContext context) throws Exception {
+            return providePaginationTestArguments();
+        }
+    }
+
     private static Stream<Arguments> providePaginationTestArguments() {
         // NB: sort order for test data same as sort test: "caseName.ASCENDING and createdDate.DESCENDING"
         List<String> defaultSortOrder = List.of(
@@ -2050,8 +2046,16 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         );
     }
 
-    @SuppressWarnings("unused")
-    private static Stream<Arguments> provideSortCriteriaTestArguments() {
+    public static class SortCriteriaTestProvider implements ArgumentsProvider  {
+
+        @Override
+        public Stream<? extends Arguments> provideArguments(ExtensionContext context) throws Exception {
+            return provideSortCriteriaTestArguments();
+        }
+
+    }
+
+    public static Stream<Arguments> provideSortCriteriaTestArguments() {
         return Stream.of(
             Arguments.of(
                 "DEFAULT",
@@ -2162,6 +2166,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         return sortCriteria;
     }
 
+
     private void stubCaseTypeRoleAssignments(String... caseTypes) {
         if (applicationParams.getEnableAttributeBasedAccessControl()) {
             String userId = "123";
@@ -2182,15 +2187,15 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             }
 
             if (Arrays.asList(caseTypes).contains("AAT")) {
-                roleAssignments.add(aatCTSpecificPublicUserRoleAssignmentJson(userId, "idam:caseworker-autotest1",
-                    "1588866820969121"));
-                roleAssignments.add(aatCTSpecificPublicUserRoleAssignmentJson(userId, "idam:caseworker-autotest1",
-                    "1589460056217857"));
+                roleAssignments.add(aatCTSpecificPublicUserRoleAssignmentJson(userId,
+                    "idam:caseworker-autotest1", "1588866820969121"));
+                roleAssignments.add(aatCTSpecificPublicUserRoleAssignmentJson(userId,
+                    "idam:caseworker-autotest1","1589460056217857"));
             }
 
             if (Arrays.asList(caseTypes).contains("MAPPER")) {
-                roleAssignments.add(mapperCTSpecificPublicUserRoleAssignmentJson(userId, "idam:caseworker-autotest1",
-                    "1588870615652827"));
+                roleAssignments.add(mapperCTSpecificPublicUserRoleAssignmentJson(userId,
+                    "idam:caseworker-autotest1","1588870615652827"));
             }
 
             if (Arrays.asList(caseTypes).contains("RESTRICTED_SECURITY")) {
